Fix #7043better align connect bar for RTL languages.

--- a/docs/sites/all/themes/ssd/sass/style-rtl.scss
+++ b/docs/sites/all/themes/ssd/sass/style-rtl.scss
@@ -48,3 +48,7 @@
 .flex-direction-nav a.flex-prev, .flex-direction-nav a.flex-next {
   text-align: right;
 }
+
+.connect-bar {
+  right: 45%;
+}
