--- a/docs/sites/all/themes/ssd/sass/style.scss
+++ b/docs/sites/all/themes/ssd/sass/style.scss
@@ -952,7 +952,7 @@ div.messages a {
 }
 .connect-bar {
   position: relative;
-  left: 42%;
+  left: 46%;
   background: #ddd;
   width: 20px;
   top: 0px;
